# PDF-RAG

./: README.md  docker-compose.yml  pyproject.toml  simple-rag.ipynb
